--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+BeautifulSoup==3.2.1
 Django==1.6.6
 Fabric==1.9.1
 MySQL-python==1.2.5
+certifi==14.05.14
+requests==2.4.0
 ecdsa==0.11
 paramiko==1.14.1
 pycrypto==2.6.1
