--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
 BeautifulSoup==3.2.1
 Django==1.6.6
-Fabric==1.9.1
 MySQL-python==1.2.5
+South==1.0
 certifi==14.05.14
-ecdsa==0.11
-paramiko==1.14.1
-pycrypto==2.6.1
 requests==2.4.0
 wsgiref==0.1.2
