--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Fabric==1.9.1
 MySQL-python==1.2.5
 South==1.0
 certifi==14.05.14
+csvImporter==0.1.3.2
 django-debug-toolbar==1.2.1
 ecdsa==0.11
 paramiko==1.14.1
