--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,17 @@ Django==1.6.6
 Fabric==1.9.1
 MySQL-python==1.2.5
 South==1.0
+argparse==1.2.1
 certifi==14.05.14
 csvImporter==0.1.3.2
+dateutils==0.6.6
 django-debug-toolbar==1.2.1
 ecdsa==0.11
 paramiko==1.14.1
 pycrypto==2.6.1
+python-dateutil==2.2
+pytz==2014.7
 requests==2.4.0
+six==1.7.3
 sqlparse==0.1.11
 wsgiref==0.1.2
