--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ boto==2.28.0
 certifi==14.05.14
 csvkit==0.6.1
 dbf==0.95.013
+django-admin-bootstrapped==2.1.1
 django-bakery==0.7.1
 django-debug-toolbar==1.2.1
+django-mass-edit==2.2
 django-tastypie==0.12.0
 ecdsa==0.11
 enum34==1.0
