--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ BeautifulSoup==3.2.1
 Django==1.7
 Fabric==1.9.1
 MySQL-python==1.2.5
+PyYAML==3.11
 SQLAlchemy==0.9.7
 argparse==1.2.1
 boto==2.28.0
