--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ docs/_build/
 # added by me
 .DS_Store
 settings_development.py
-settings_production.py
+#settings_production.py
 *.pyc
 *.sqlite
 *.csv
