--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,41 @@
-Django==1.7
-Fabric==1.10.1
-GDAL==1.11.1
-Jinja2==2.7.3
-MarkupSafe==0.23
+BeautifulSoup==3.2.1
+Django==1.7.3
+Fabric==1.9.1
 MySQL-python==1.2.5
--e git+git@github.com:chrislkeller/openelections-core.git@f246ed67e5c4a3bf19c36212fb91c7325687ac44#egg=OpenElections_Core-delaware-results
 PyYAML==3.11
-Pygments==2.0.2
 SQLAlchemy==0.9.8
-argparse==1.3.0
-beautifulsoup4==4.3.2
-cssselect==0.9.1
+amqp==1.4.6
+anyjson==0.3.3
+argparse==1.2.1
+billiard==3.3.0.19
+boto==2.28.0
+celery==3.1.17
+certifi==14.05.14
 csvkit==0.9.0
-dbf==0.94.003
+dbf==0.94.3
+django-admin-bootstrapped==2.1.1
+django-bakery==0.7.1
+django-debug-toolbar==1.2.2
+django-mass-edit==2.2
+django-tastypie==0.12.0
 ecdsa==0.11
-howdoi==1.1.7
+enum34==1.0
+hurry.filesize==0.9
 jdcal==1.0
-lxml==3.4.1
-numpy==1.9.1
+kombu==3.0.24
+latimes-calculate==0.3.0
 openpyxl==2.1.4
-paramiko==1.15.2
-pbr==0.10.7
+paramiko==1.14.1
+progressbar==2.2
 pycrypto==2.6.1
-pyquery==1.2.9
-pyspatialite==3.0.1
 python-dateutil==2.2
-requests==2.4.3
-requests-cache==0.4.6
+python-mimeparse==0.1.4
+pytz==2014.7
+requests==2.2.1
 six==1.9.0
-stevedore==1.2.0
-vboxapi==1.0
-virtualenv==1.11.6
-virtualenv-clone==0.2.5
-virtualenvwrapper==4.3.1
+sqlparse==0.1.14
+twitter==1.15.0
+webassets==0.10.1
 wsgiref==0.1.2
-wxPython==3.0.1.1
-wxPython-common==3.0.1.1
-xlrd==0.9.2
+xlrd==0.9.3
+yolk==0.4.3
