--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-mass-edit==2.2
 django-tastypie==0.12.0
 ecdsa==0.11
 enum34==1.0
+httplib2==0.9
 hurry.filesize==0.9
 jdcal==1.0
 kombu==3.0.24
@@ -29,9 +30,11 @@ paramiko==1.14.1
 progressbar==2.2
 pycrypto==2.6.1
 python-dateutil==2.2
+python-instagram==1.3.0
 python-mimeparse==0.1.4
 pytz==2014.7
 requests==2.2.1
+simplejson==3.6.5
 six==1.9.0
 sqlparse==0.1.14
 twitter==1.15.0
